[package]
name = "run_router"
version = "0.1.0"
authors = ["Ben Lutz <ben.ryan.lutz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
rand_pcg = "0.3.1"